Fix alignment on yield recipients screen

--- a/src/views/Give/YieldRecipients.scss
+++ b/src/views/Give/YieldRecipients.scss
@@ -48,7 +48,7 @@
     align-items: center;
     width: 20%;
     margin-left: 5px !important;
-    text-align: left;
+    text-align: right;
 
     &.deposit-manage-cell {
       margin-left: 40px !important;
